--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -28,7 +28,7 @@ jobs:
         run: go build -v ./...
 
       - name: Test
-        run: go test -v ./... -test.bench=.* -coverprofile=coverage.txt -covermode=atomic
+        run: go test -v ./... -race -test.bench=.* -coverprofile=coverage.txt -covermode=atomic
 
       - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@master
